# order-payment-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
scr/application/dto/: payment_result.py
scr/application/use_cases/: pay_order_use_case.py
scr/domain/: exceptions.py
scr/domain/entities/: order.py  order_line.py
scr/domain/value_objects/: money.py
scr/infrastructure/payment_gateways/: fake_payment_gateway.py
scr/infrastructure/repositories/: in_memory_order_repository.py
scr/interfaces/: payment_gateways.py  repositories.py
tests/application/: test_pay_order_use_case.py
tests/unit/: test_entities.py
